add cors origins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.h2.console.enabled=true
 
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
+
+# CORS Configuration
+spring.cors.allowed-origins=http://localhost:8080,https://app.mylab.local
+spring.cors.allowed-methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
+spring.cors.allowed-headers=Authorization,Content-Type,X-Requested-With,Accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,Credential
