--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,20 @@
     "name": "jwt.authorities.key",
     "type": "java.lang.String",
     "description": "A description for 'jwt.authorities.key'"
+  },
+  {
+    "name": "spring.cors.allowed-origins",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cors.allowed-origins'"
+  },
+  {
+    "name": "spring.cors.allowed-methods",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cors.allowed-methods'"
+  },
+  {
+    "name": "spring.cors.allowed-headers",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.cors.allowed-headers'"
   }
 ]}
